Update for production

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container-fluid">
+<div class="container about">
                 <div class="row">
                                 <div class="col-4">
                                         <p>Thanks for taking the time to look at my work.
@@ -17,7 +17,7 @@
                                                 <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature"/>
                                 </div>
                                 <div class="col-4">
-                                        <img src="{% static '/images/pic.jpg' %}" alt="" class="img-fluid"/>
+                                        <img src="{% static '/images/pic.png' %}" alt="" class="img-fluid"/>
                                 </div>
                                 <div class="col-4">
                                         <p><strong>Since you ask…</strong>
