--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -62,7 +62,7 @@
           >
             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
               <li class="active"><a href="{% url 'index' %}">Home</a></li>
-              <li><a href="#">Welcome</a></li>
+              <li><a href="{% url 'welcome' %}">Welcome</a></li>
               <li><a href="#">Work</a></li>
               <li><a href="#">Recent Activity</a></li>
               <li><a href="#">Testimonials</a></li>
