Update Prev/Next buttons

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -67,7 +67,7 @@
                 {% endif %}><a href="{% url 'index' %}">Home</a></li>
               <li
                 {% if 'welcome' in request.path %} 
-                  class="active" 
+                  class="active active1" 
                 {% endif %}><a href="{% url 'welcome' %}">Welcome</a></li>
               <li><a href="#">Work</a></li>
               <li><a href="#">Recent Activity</a></li>
