--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1545,12 +1545,17 @@ a:hover {
 }
 .swiper-button-prev:before,
 .swiper-container-rtl .swiper-button-next:before {
-  background: rgba(0, 0, 0, 0.6);
+  background: blue;
   padding: 8px;
   content: "\e5c4";
   font-family: "icomoon";
   font-size: 20px;
   color: #fff;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .swiper-button-next,
@@ -1561,13 +1566,17 @@ a:hover {
 }
 .swiper-button-next:before,
 .swiper-container-rtl .swiper-button-prev:before {
-  background: rgba(0, 0, 0, 0.6);
+  background: blue;
   padding: 8px;
   content: "\e5c8";
   font-family: "icomoon";
   font-size: 20px;
   color: #fff;
+  border-radius: 50%;
 }
+
+.swiper-button-next:focus { outline: none; }
+.swiper-button-prev:focus { outline: none; }
 
 .swiper-pagination-bullet-active {
   opacity: 1;
@@ -1634,6 +1643,47 @@ a:hover {
 
 .active {
   color: blue !important;
+}
+
+.active1 a {
+  color: #00782A !important;
+}
+
+.pic {
+  -webkit-animation: fadein 2s;
+  /*Safari,ChromeandOpera>12.1*/-moz-animation: fadein 10s;
+  /*Firefox<16*/-ms-animation: fadein 10s;
+  /*InternetExplorer*/-o-animation: fadein 10s;
+  /*Opera<12.1*/animation: fadein 10s;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
 @media only screen and (max-width: 1199px) {
