--- a/templates/pages/welcome.html
+++ b/templates/pages/welcome.html
@@ -17,7 +17,7 @@
                                                 <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature"/>
                                 </div>
                                 <div class="col-12 col-lg-4 img">
-                                        <img src="{% static '/images/pic.png' %}" alt="pic" class="pic img-fluid hinge"/>
+                                        <img src="{% static '/images/pic.png' %}" alt="pic" class="pic img-fluid"/>
                                 </div>
                                 <div class="col-12 col-lg-4">
                                         <p><strong class="since">Since you ask…</strong><br/><br/>
