--- a/templates/pages/welcome.html
+++ b/templates/pages/welcome.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container-fluid">
                 <div class="row about">
-                                <div class="col-12 col-lg-4">
+                                <div class="col-12 col-xl-4">
                                         <p>Thanks for taking the time to look at my work.<br/><br/>
                                                 I’m always looking for ways to improve the service I offer so all comments,
                                                 compliments or criticisms are welcome, though as Noel Cowerd said ’I can
@@ -16,10 +16,12 @@
                                                 Thanks for visiting</p>
                                                 <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature"/>
                                 </div>
-                                <div class="col-12 col-lg-4 img">
-                                        <img src="{% static '/images/pic.png' %}" alt="pic" class="pic img-fluid"/>
+                                <div class="col-12 col-xl-4 img">
+                                        <div class="frame">
+                                                <img src="{% static '/images/pic2.png' %}" alt="pic" class="pic img-fluid"/>
+                                        </div>
                                 </div>
-                                <div class="col-12 col-lg-4">
+                                <div class="col-12 col-xl-4">
                                         <p><strong class="since">Since you ask…</strong><br/><br/>
 
                                                 Born & raised in Scotland, I completed a B.Sc in Pure Mathematics before relocating to London to study photojournalism and launch my photographic career in 1985<br/><br/>
