--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,7 +2,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="container-fluid main-img"></div>
+<!-- <div class="container-fluid main-img"></div> -->
+<div class="tech-slideshow">
+  <div class="mover-1"></div>
+<!--   <div class="mover-2"></div> -->
+</div>
 <div class="quote">
   <p>
     I don't know what London's coming to - the higher the buildings the
