Adjustments welcome page

--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1743,6 +1743,7 @@ a:hover {
   -ms-transform: translate(-50%, 0) rotate(-1deg);
   -o-transform: translate(-50%, 0) rotate(-1deg);
 }
+
 @media only screen and (max-width: 1199px) {
   .logo-nav {
     display: inline-block;
@@ -1750,4 +1751,34 @@ a:hover {
   .logo {
     display: none;
   }
+}
+
+@media only screen and (max-width: 450px) {
+  .frame {
+    position: relative;
+    background-image: none;
+    width: 175px;
+    height: 225px;
+    margin: 0 auto;
+  }
+  
+  .pic {
+    -webkit-animation: fadein 2s;
+    /*Safari,ChromeandOpera>12.1*/-moz-animation: fadein 10s;
+    /*Firefox<16*/-ms-animation: fadein 10s;
+    /*InternetExplorer*/-o-animation: fadein 10s;
+    /*Opera<12.1*/animation: fadein 10s;
+    position: absolute;
+    top: 2.25rem;
+    left: 50%;
+    width: 125px;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translate(-50%, 0) rotate(0);
+    -webkit-transform: translate(-50%, 0) rotate(0);
+    -moz-transform: translate(-50%, 0) rotate(0);
+    -ms-transform: translate(-50%, 0) rotate(0);
+    -o-transform: translate(-50%, 0) rotate(0);
+}
 }
