--- a/templates/pages/welcome.html
+++ b/templates/pages/welcome.html
@@ -17,8 +17,9 @@
                                                 <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature"/>
                                 </div>
                                 <div class="col-12 col-xl-4 img">
+                                        <div> <img src="{% static '/images/pic2.png' %}" alt="pic" class="pic2 img-fluid"/></div>
                                         <div class="frame">
-                                                <img src="{% static '/images/pic2.png' %}" alt="pic" class="pic img-fluid"/>
+                                                <img src="{% static '/images/pic1.png' %}" alt="pic" class="pic img-fluid"/>
                                         </div>
                                 </div>
                                 <div class="col-12 col-xl-4">
