--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -14,7 +14,7 @@
   </p>
 </div>
 
-<div class="container-fluid" data-aos="fade" data-aos-delay="500">
+<!-- <div class="container-fluid" data-aos="fade" data-aos-delay="500">
   <div class="swiper-container images-carousel">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
@@ -60,5 +60,5 @@
     <div class="swiper-button-next"></div>
     <div class="swiper-scrollbar"></div>
   </div>
-</div>
+</div> -->
 {% endblock %}
