--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1836,16 +1836,14 @@ a:hover {
 }
 .designs .text{
   position:absolute;
-  color:white;
-  bottom:0px;
-  height: 15%;
+  color:black;
+  text-transform: capitalize;
+  bottom:-30px;
+  height: 20%;
   width: 100%;
-}
-p{
-  font-family: open sans;
   text-align: center;
-  cursor: pointer;
 }
+
 .footer p{
   margin-bottom: 0 !important;
   font-size: 70%;
