--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1664,6 +1664,10 @@ a:hover {
   color: 	#FFD300 !important;
 }
 
+.active3 a {
+  color:	#E32017 !important;
+}
+
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
