--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% block content %}
-<!-- Photos -->
+<!-- Works -->
 <section id="works" class="py-5">
     <div class="container large">
         <!-- <div class="row text-center">
