Update text align justify

--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -19,7 +19,7 @@
                         <div class="col-md-7 mb-3">
                             <div class="body">
                                 <h5 class="card-title">{{ activity.title }}</h5>
-                                <p class="card-text">{{ activity.description }}</p>
+                                <p class="card-text justify">{{ activity.description }}</p>
                                 <a href="{{ activity.id }}" class="btn btn-blue">Read More</a>
                             </div>
                         </div>
