--- a/templates/testimonials/testimonial.html
+++ b/templates/testimonials/testimonial.html
@@ -14,7 +14,7 @@
                 <div class="card">
                     <img src="{{testimonial.photo_main.url}}" alt="" class="mb-3 img-fluid card-img-top">
                     <div class="card-body">
-                        <p class="card-text">{{ testimonial.testimonial}}</p>
+                        <p class="card-text justify">{{ testimonial.testimonial}}</p>
                     </div>
                 </div>
             </div>
