--- a/templates/elements/post.html
+++ b/templates/elements/post.html
@@ -14,7 +14,7 @@
                 <div class="card">
                     <img src="{{post.photo_main.url}}" alt="" class="mb-3 img-fluid card-img-top">
                     <div class="card-body">
-                        <p class="card-text">{{ post.content|safe}}</p>
+                        <p class="card-text justify">{{ post.content|safe}}</p>
                     </div>
                 </div>
             </div>
