--- a/templates/elements/posts.html
+++ b/templates/elements/posts.html
@@ -19,7 +19,7 @@
                         <div class="col-md-7 mb-3">
                             <div class="body">
                                 <h5 class="card-title">{{ post.title }}</h5>
-                                <p class="card-text">{{ post.description }}</p>
+                                <p class="card-text justify">{{ post.description }}</p>
                                 <a href="{{ post.id }}" class="btn btn-blue">Read More</a>
                             </div>
                         </div>
