--- a/templates/recent_activities/activity.html
+++ b/templates/recent_activities/activity.html
@@ -14,7 +14,7 @@
                 <div class="card">
                     <img src="{{activity.photo_main.url}}" alt="" class="mb-3 img-fluid card-img-top">
                     <div class="card-body">
-                        <p class="card-text">{{ activity.content|safe}}</p>
+                        <p class="card-text justify">{{ activity.content|safe}}</p>
                     </div>
                 </div>
             </div>
