--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -66,7 +66,7 @@
                         <div class="col-md-7 mb-3">
                             <div class="body">
                                 <h5 class="card-title">{{ work.title }}</h5>
-                                <p class="card-text">{{ work.description }}</p>
+                                <p class="card-text justify">{{ work.description }}</p>
                                 <!-- <a href="{{ work.id }}" class="btn btn-danger">Read More</a> -->
                             </div>
                         </div>
