Customize Admin Area

--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -29,7 +29,7 @@
                             {% if exhibition.is_published %}
                                 <div class="col-md-12 mb-3">
                                     <p>{{exhibition.date | date:"Y"}}</p>
-                                    <p class="justify">{{exhibition.description}}</p>
+                                    <p>{{exhibition.description}}</p>
                                 </div>
                             {% endif %}
                         {% endfor %}
