--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -1,6 +1,7 @@
     
 <!DOCTYPE html>
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <!-- Works -->
 <section id="works" class="py-5">
@@ -11,30 +12,20 @@
             </div>
         </div> -->
         {% if exhibitions %}
-            <div class="row">
-                <div class ="col-md-8">
-                    <div class="row text-center post-container py-3">
+            <div class="container-exh">
+                <nav class="nav-exh">
+                    <ul class="ul-exh">
+                    <li class="li-exh">
                         {% for exhibition in exhibitions %}
                             {% if exhibition.is_published %}
-                                    <div class="col-md-4 mb-3">
-                                        <img src="{{exhibition.photo_main.url}}" alt="" class="mb-3 img-fluid">
-                                    </div>
-                        {% endif %}
-                            {% endfor %}            
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row text-center post-container py-3">
-                        {% for exhibition in exhibitions %}
-                            {% if exhibition.is_published %}
-                                <div class="col-md-12 mb-3">
-                                    <p>{{exhibition.date | date:"Y"}}</p>
-                                    <p>{{exhibition.description}}</p>
-                                </div>
+                                <p>{{exhibition.date | date:"Y"}}</p>
+                                <a href="#"><span></span>{{exhibition.description}}</a>
+                                <img src="{{exhibition.photo_main.url}}" alt="" class="exh-img">
                             {% endif %}
                         {% endfor %}
-                    </div>
-                </div>
+                    </li>
+                    </ul>
+                </nav>
             </div>
          {% else %}
             <div class="row text-center">
