Update Exhibitions Design

--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -17,10 +17,20 @@
                     <ul class="ul-exh">
                     <li class="li-exh">
                         {% for exhibition in exhibitions %}
-                            {% if exhibition.is_published %}
-                                <a href="#"><span></span>{{exhibition.date | date:"Y"}} - {{exhibition.title}}</a>
-                                <img src="{{exhibition.photo_main.url}}" alt="" class="">
-                            {% endif %}
+                        <div class="row">
+                            <div class="col-6">
+                                    {% if exhibition.is_published and exhibition.id <= 10 %}
+                                    <a href="#"><span></span>{{exhibition.date | date:"Y"}} - {{exhibition.title}}</a>
+                                    <img src="{{exhibition.photo_main.url}}" alt="" class="">
+                                {% endif %}
+                            </div>
+                            <div class="col-6">
+                                    {% if exhibition.is_published and exhibition.id > 10 %}
+                                    <a href="#"><span></span>{{exhibition.date | date:"Y"}} - {{exhibition.title}}</a>
+                                    <img src="{{exhibition.photo_main.url}}" alt="" class="">
+                                {% endif %}
+                            </div>
+                        </div>
                         {% endfor %}
                     </li>
                     </ul>
